<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">App</string>
    <string name="commonutils_leo" translatable="false">Leonard Lemke</string>
    <string name="commonutils_leo_job" translatable="false">Softwaredeveloper</string>
    <string name="commonutils_my_website" translatable="false">https://www.leonard-lemke.com</string>
    <string name="commonutils_my_insta" translatable="false">https://www.instagram.com/lemkinator5/</string>
    <string name="commonutils_my_github" translatable="false">https://github.com/Lemkinator</string>
    <string name="commonutils_playstore_developer_page_link" translatable="false">https://play.google.com/store/apps/dev?id=4961154860499174073</string>
    <string name="commonutils_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="commonutils_playstore_app_link" translatable="false">market://details?id=</string>
    <string name="commonutils_rick_roll_troll_link" translatable="false">https://www.leonard-lemke.com/rr</string>
    <string name="commonutils_quick_share" translatable="false">Quick Share</string>
    <string name="commonutils_playstore" translatable="false">Play Store</string>
    <string name="commonutils_github" translatable="false">Github</string>
    <string name="commonutils_instagram" translatable="false">Instagram</string>
    <string name="commonutils_tiktok" translatable="false">TikTok</string>
    <string name="commonutils_preference_key_dark_mode" translatable="false">darkMode</string>
    <string name="commonutils_preference_key_auto_dark_mode" translatable="false">autoDarkMode</string>
    <string name="commonutils_preference_key_dev_options" translatable="false">devOptions</string>
    <string name="commonutils_preference_key_delete_app_data" translatable="false">deleteAppData</string>
    <string name="commonutils_preference_key_language" translatable="false">language</string>
    <string name="commonutils_preference_key_image_save_location" translatable="false">imageSaveLocation</string>
    <string name="commonutils_preference_key_tos" translatable="false">tos</string>
    <string name="commonutils_preference_key_privacy_policy" translatable="false">privacyPolicy</string>
    <string name="commonutils_preference_key_report_bug" translatable="false">reportBug</string>
    <string name="commonutils_app_description" translatable="false">App description</string>
    <string name="commonutils_email" translatable="false">apps@leonard-lemke.com</string>
    <string name="commonutils_privacy_website" translatable="false">https://www.leonard-lemke.com/apps</string>
    <string name="commonutils_oobe1_title">Beautiful design</string>
    <string name="commonutils_oobe2_title">Free</string>
    <string name="commonutils_oobe3_title">No ads</string>
    <string name="commonutils_oobe1_summary">@string/commonutils_app_description</string>
    <string name="commonutils_oobe2_summary">No subscriptions, no in-app purchases, no costs at all.</string>
    <string name="commonutils_oobe3_summary">No annoying ads.</string>
    <string name="commonutils_tos">Terms of Service</string>
    <string name="commonutils_tos_content">It is not permitted to use this app contrary to morality or the laws in force. \n\nYou also agree that you will not use this app for any purposes prohibited by United States law, including, without limitation, the development, design, manufacture or production of missile, chemical or biological weapons. \nHowever, this restriction will not apply in the event of the occurrence (certified by the United States Centers for Disease Control or successor body) of a widespread viral infection transmitted via bites or contact with bodily fluids that causes human corpses to reanimate and seek to consume living human flesh, blood, brain or nerve tissue and is likely to result in the fall of organized civilization. \n\nA special consideration, which may include monetary compensation, will be provided to a limited number of users who read this section of the Terms and Services and contact me at writing-an-email-to-this-address-will-cost-you-10-euro@leonard-lemke.com. This offer may be withdrawn at any time without any notice. \n\nAdditional questions will be answered at this-email-is-way-too-long-and-hopefully-you-cannot-copy-paste@leonard-lemke.com. \n\nRegarding the contact features provided in various places within this app, which generate a topic-specific, prewritten email when activated, the following applies: These templates are intended solely as a starting point for your personalized message. Sending one of these templates unchanged, or a blank email, constitutes misuse of the feature and is not permitted. By doing so anyway, you legally agree to be classified as a person demonstrably incapable of properly operating basic functions of their smartphone and its email application functions. Such a classification renders further communication obsolete and releases the recipient from any obligation to respond.</string>
    <string name="commonutils_oobe_tos_text">By continuing, you agree to the %1$s.</string>
    <string name="commonutils_oobe_new_tos_text">The %1$s have been updated. By continuing, you agree to the new %1$s.</string>
    <string name="commonutils_help">Help</string>
    <string name="commonutils_contact_me">Contact me (e-mail)</string>
    <string name="commonutils_about_app">About app</string>
    <string name="commonutils_open_in_playstore">Open in Play Store</string>
    <string name="commonutils_open_source_licenses">Open source licenses</string>
    <string name="commonutils_about_me">About me</string>
    <string name="commonutils_write_email">Write an e-mail</string>
    <string name="commonutils_website">Website</string>
    <string name="commonutils_support_me_text">If you want to support me in any way, feel free to send me an e-mail</string>
    <string name="commonutils_support_me">Support me</string>
    <string name="commonutils_rate_app">Rate app in Play Store</string>
    <string name="commonutils_write_review">Write a review</string>
    <string name="commonutils_share">Share</string>
    <string name="commonutils_share_app">Share app</string>
    <string name="commonutils_useful_links">Useful links</string>
    <string name="commonutils_playstore_ad">ADVERTISEMENT!!!&#129313;&#129396;</string>
    <string name="commonutils_playstore_redirect_message">According to Google Play, this is \"Deceptive advertisement that simulates or impersonates the user interface of an app feature\"… Since app updates are otherwise rejected by Google Play, here\'s a hint: This button leads (surprisingly?&#129313;) to my developer page on Google Play, continue?</string>
    <string name="commonutils_settings">Settings</string>
    <string name="commonutils_design">Design</string>
    <string name="commonutils_system_default">System default</string>
    <string name="commonutils_general">General</string>
    <string name="commonutils_language">Language</string>
    <string name="commonutils_change_language">Change app language</string>
    <string name="commonutils_change_language_not_supported_by_device">Change language is not supported by your device.</string>
    <string name="commonutils_image_save_location">File storage location for images</string>
    <string name="commonutils_delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="commonutils_delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="commonutils_dev_options">Developer options</string>
    <string name="commonutils_more_information">More Information</string>
    <string name="commonutils_privacy_policy">Privacy Policy</string>
    <string name="commonutils_report_bug">Report bug or improvement</string>
    <string name="commonutils_phone_settings">Phone settings</string>
    <string name="commonutils_mute_all_audio_streams">Mute all audio streams</string>
    <string name="commonutils_dnd">Do not disturb</string>
    <string name="commonutils_dnd_summary">Enable/disable Do not disturb mode</string>
    <string name="commonutils_dnd_activated">Do not disturb mode activated</string>
    <string name="commonutils_dnd_deactivated">Do not disturb mode deactivated</string>
    <string name="commonutils_mute">Mute</string>
    <string name="commonutils_failed_to_mute_streams">Oops, I failed to mute all streams…</string>
    <string name="commonutils_need_access">Permission needed</string>
    <string name="commonutils_need_access_dnd">To enable the "Do not disturb" mode, the app needs the "Do not disturb" permission</string>
    <string name="commonutils_grant_access">Grant permission</string>
    <string name="commonutils_error">Error</string>
    <string name="commonutils_error_unknown">Unknown error</string>
    <string name="commonutils_no_email_app_installed">No e-mail app installed…</string>
    <string name="commonutils_no_browser_app_installed">No browser app installed…</string>
    <string name="commonutils_error_cant_open_url">Error: URL could not be opened.</string>
    <string name="commonutils_error_cant_open_app">Error: App could not be opened.</string>
    <string name="commonutils_error_cant_open_app_settings">Error: App settings could not be opened.</string>
    <string name="commonutils_error_saving_image">Error saving image</string>
    <string name="commonutils_error_creating_file">Error creating file</string>
    <string name="commonutils_error_share_content_not_supported_on_device">Error: Sharing content is not supported on your device.</string>
    <string name="commonutils_error_saving_content_is_not_supported_on_device">Error: Saving content is not supported on your device.</string>
    <string name="commonutils_error_no_valid_file_selected">No valid file selected</string>
    <string name="commonutils_error_loading_apps">Error loading apps</string>
    <string name="commonutils_error_app_not_found">App not found</string>
    <string name="commonutils_ok" translatable="false" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="commonutils_yes">Yes</string>
    <string name="commonutils_no">No</string>
    <string name="commonutils_search">Search</string>
    <string name="commonutils_warning">Warning</string>
    <string name="commonutils_info">Info</string>
    <string name="commonutils_light">Light</string>
    <string name="commonutils_dark">Dark</string>
    <string name="commonutils_experimental">Experimental</string>
    <string name="commonutils_new_badge_text">NEW</string>
    <string name="commonutils_delete">Delete</string>
    <string name="commonutils_copied_to_clipboard">Copied to clipboard</string>
    <string name="commonutils_no_entry">No entry</string>
    <string name="commonutils_no_results_found">No results found</string>
    <string name="commonutils_custom">Custom</string>
    <string name="commonutils_downloads" translatable="false">Downloads</string>
    <string name="commonutils_pictures" translatable="false">Pictures</string>
    <string name="commonutils_dcim" translatable="false">DCIM</string>
    <string name="commonutils_reset">Reset</string>
    <string name="commonutils_pause">Pause</string>
    <string name="commonutils_resume">Resume</string>
    <string name="commonutils_tip">Tip</string>
    <string name="commonutils_dont_show_again">Don\'t show again</string>
    <string name="commonutils_history">History</string>
    <string name="commonutils_delete_history">Delete history</string>
    <string name="commonutils_delete_history_message">Are you sure you want to delete the history?</string>
    <string name="commonutils_statistics">Statistics</string>
    <string name="commonutils_image_saved">Image saved</string>
    <string name="commonutils_save_as_image">Save as image</string>
    <string name="commonutils_background">Background</string>
</resources>