<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/commonutils_navigation"
    app:startDestination="@+id/commonutils_oobe_dest">

    <fragment
        android:id="@+id/commonutils_oobe_dest"
        android:name="de.lemke.commonutils.ui.fragment.CommonUtilsOOBEFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/commonutils_about_dest"
        android:name="de.lemke.commonutils.ui.fragment.CommonUtilsAboutFragment"
        android:label="@string/commonutils_about_app" />

    <fragment
        android:id="@+id/commonutils_libs_dest"
        android:name="de.lemke.commonutils.ui.fragment.CommonUtilsLibsFragment"
        android:label="@string/commonutils_open_source_licenses" />

    <fragment
        android:id="@+id/commonutils_about_me_dest"
        android:name="de.lemke.commonutils.ui.fragment.CommonUtilsAboutMeFragment"
        android:label="@string/commonutils_about_me" />

    <fragment
        android:id="@+id/commonutils_settings_dest"
        android:name="de.lemke.commonutils.ui.fragment.CommonUtilsSettingsFragment"
        android:label="@string/commonutils_settings" />

</navigation>
